--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@
     --text-color-primary:#000;
     --text-color-secondary:#6e6e6e;
     --text-color-white: #fff;
+    --text-color-off-white: #d9d9d9;
 
     --color-primary: #d04c4c;
     --color-secondary: #f9f9f9;
@@ -44,6 +45,19 @@ h1, h2, h3, h4, h5, h6 {
     z-index: 0;
     padding: 70px 0;
     background: var(--color-primary);
+}
+
+.mse-bs-header::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
 }
 
 .mse-bs-header-menu {
@@ -204,4 +218,30 @@ footer.mse-bs-footer-area {
 
 footer.mse-bs-footer-area p {
     margin: 0;
+}
+
+/* Single page css */
+
+.single-post .mse-bs-single-page-title {
+    color: var(--text-color-off-white);
+    font-family: var(--font-curvy);
+    font-size: 4.5rem;
+    font-weight: 700;
+    line-height: 70px;
+}
+
+.single-post .mse-bs-metas span,
+.single-post .mse-bs-metas span a {
+    color: var(--text-color-off-white);
+    font-family: var(--font-primary);
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 1;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.single-post .mse-bs-metas span a {
+    font-weight: 600;
+    text-decoration: none;
 }
